# pingwa-client

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
src/pingwa/client/: README.md  __init__.py  cli.py  http.py  mcp_stdio.py  tools.py
tests/: test_cli.py  test_client_http.py  test_mcp_stdio.py  test_mcp_tools.py
